# Partition-Finder-2.1.1

./: .gitignore  BASELINE_PY2_COMPARISON.md  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION_NOTES.txt  DISTRIBUTION_READY.md  GITHUB_RELEASE_CHECKLIST.md  GUI_USER_GUIDE.md  HOW_TO_RUN.md  INSTALLER_BUILD_GUIDE.md  INSTRUCTIONS.TXT  PartitionFinder.py  PartitionFinderMorphology.py  PartitionFinderProtein.py  PartitionFinder_GUI.py  QUICK_START_INSTALLER.md  README.md  RELEASE_READY.md  Run_PartitionFinder_GUI.bat  Run_PartitionFinder_WebUI.bat  STANDALONE_VERIFICATION.md  VERSION.txt  build_installer.py  build_portable.bat  convert_nexus_to_phylip.py  diagnose_nexus.py  gui_app.py  installer_setup.iss  partfinder_gui.spec  pyi_rth_fix_pkg_resources.py  requirements.txt  start_gui.bat
.pf_bench/: bench.json  profile_core_aminoacid.prof  profile_core_aminoacid_2.prof  profile_core_aminoacid_3.prof  profile_core_aminoacid_4.prof  profile_core_nucleotide.prof  profile_core_nucleotide_2.prof  profile_core_nucleotide_3.prof  profile_nucleotide.prof
docs/: SCREENSHOTS.md
partfinder/: alignment.py  config.py  database.py  dependencies.py  morph_tiger.py  parser.py  raxml.py  submodels.py  subset_ops.py
partitionfinder/: __init__.py
rust/: README.md
rust/pf_accel/: Cargo.toml  pyproject.toml
rust/pf_accel/src/: lib.rs
tests/: test_accel_fallback.py  test_accel_subset_list_stats.py  test_api_cpus.py  test_api_hardening.py  test_api_jobs.py  test_api_list_jobs.py  test_regression_examples.py
tools/: benchmark_accel_subset_ops.py  benchmark_cpus_api.py  profile_core.py  (+5 more)
(+65 files in other folders)
