[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "pf-accel"
version = "0.1.0"
description = "Optional Rust acceleration for PartitionFinder (Phase 4)"
requires-python = ">=3.10"

[tool.maturin]
module-name = "partitionfinder.accel._pf_accel"
manifest-path = "Cargo.toml"
